css: /proposal: right align badges in proposal table. Fixes #266

--- a/adhocracy/static/style/base.css
+++ b/adhocracy/static/style/base.css
@@ -2267,7 +2267,7 @@ h1 .badge, h3 .badge {
     float:right;
 }
 
-.event h3 .badge, h1.with_vote .badge, #proposals_table .badge {
+.event h3 .badge, h1.with_vote .badge {
     float: none;
 }
 
